# build-optimisation

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  modules.yaml  pyproject.toml  pyrightconfig.json  teams.yaml  toolchain.cmake
.claude/: settings.local.json
docs/: data-schema.md
notebooks/: 01_data_cleaning.ipynb  02_contributor_groups.ipynb  02_exploratory_analysis.ipynb  03_codebase_health.ipynb  03_critical_path.ipynb  04_build_performance.ipynb  04_community_detection.ipynb  05_change_impact_simulation.ipynb  05_executable_deps.ipynb  06_clustering.ipynb  06_feature_groups.ipynb  07_feature_group_optimisation.ipynb  07_spectral_partitioning.ipynb  08_codegen_analysis.ipynb  08_impact_simulation.ipynb  08_recommendations.ipynb  09_recommendations.ipynb
notebooks/analysis/: 01_data_cleaning.ipynb  02_contributor_groups.ipynb  03_codebase_health.ipynb  04_build_performance.ipynb  05_executable_deps.ipynb  06_feature_groups.ipynb  07_feature_group_optimisation.ipynb  08_impact_simulation.ipynb  09_recommendations.ipynb
notebooks/optimisation/: 01_data_validation.ipynb  02_global_profile.ipynb  02_teams_ownership.ipynb  03_build_performance.ipynb  03_global_profile.ipynb  04_build_performance.ipynb  04_header_analysis.ipynb  05_dependency_graph.ipynb  05_header_pch_analysis.ipynb  06_dependency_graph.ipynb  06_modularity.ipynb  07_module_analysis.ipynb  07_recommendations.ipynb  08_recommendations.ipynb  08_team_report.ipynb  09_comparison.ipynb  10_trend_analysis.ipynb
research/: COVERAGE_ANALYSIS.txt  attribute_reference.md  build-optimiser-notebooks-supplement.md  build-optimiser-spec-v2.md  build-optimiser-spec.md  cmake-direct-vs-transitive-dependencies.md  cmake-file-api-codegen-v2.md  example-project-design.md  ninja-build-file-parsing.md  ninja-build-log-hashing.md  ninja-scheduler.md
scripts/: collect_all.sh  consolidate_all.sh
scripts/analysis/: __init__.py  _common.py  critical_path.py  header_hotlist.py  hotspots.py  layer_violations.py  ownership_risk.py  rebuild_impact.py  slow_files.py  target_summary.py
scripts/collect/: 01_cmake_file_api.py  01_dependency_graph.py  02_codegen_inventory.py  02_compile_times.py  02_git_history.py  03_compile_times.py  03_instrumented_build.py  03_object_files.py  04_post_build_metrics.py  04_sloc.py  05_preprocessed_size.py  06_git_history.py  06_ninja_log.py  07_header_depth.py  (+3 more)
tests/: conftest.py  test_build.py  test_codegen.py  test_config.py  test_export.py  test_git.py  test_graph.py  test_graphs.py  test_headers.py  test_metrics.py  test_modularity.py  test_ninja.py  test_recommend.py  test_simulation.py  test_types.py
tests/fixture/: CMakeLists.txt  create_git_history.sh
tests/fixture/config_iface/: CMakeLists.txt
tests/fixture/src/app/: CMakeLists.txt  main.cpp
tests/fixture/src/benchmark/: CMakeLists.txt  bench_main.cpp
tests/fixture/src/codegen/: CMakeLists.txt  generate_messages.py  messages.def
tests/fixture/src/codegen/proto/: registry.cpp  registry.h  validation.cpp  validation.h
tests/fixture/src/compute/: CMakeLists.txt  pipeline.cpp  pipeline.h  scheduler.cpp  scheduler.h
tests/fixture/src/core/: CMakeLists.txt  assert.cpp  assert.h  string_utils.cpp  string_utils.h  types.cpp  types.h
tests/fixture/src/engine/: CMakeLists.txt  engine.cpp  engine.h
tests/fixture/src/logging/: CMakeLists.txt  logger.cpp  logger.h  sink.cpp  sink.h
tests/fixture/src/math/: CMakeLists.txt  matrix.cpp  matrix.h  transforms.cpp  transforms.h  vector.cpp  vector.h
tests/fixture/src/math/helpers/: constants.cpp  constants.h  interpolation.cpp  interpolation.h
tests/fixture/src/middleware/: CMakeLists.txt  metrics_collector.cpp  metrics_collector.h  rate_limiter.cpp  rate_limiter.h  request_router.cpp  request_router.h  service_registry.cpp  service_registry.h
tests/fixture/src/platform/: CMakeLists.txt  filesystem.cpp  filesystem.h  thread_pool.cpp  thread_pool.h
tests/fixture/src/plugin_api/: CMakeLists.txt  plugin_api.cpp  plugin_api.h  plugin_registry.cpp  plugin_registry.h
tests/fixture/src/protocol/: CMakeLists.txt  connection.cpp  connection.h  handler.cpp  handler.h
tests/fixture/src/serialization/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h
tests/fixture/src/test/: CMakeLists.txt  test_compute.cpp  test_main.cpp  test_protocol.cpp
(+115 files in other folders)
