[project]
name = "build-optimiser"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "networkx>=3.0",
    "pydot>=2.0",
    "python-louvain>=0.16",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "pymetis>=2023.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyvis>=0.3",
    "pyyaml>=6.0",
    "jupyterlab>=4.0",
    "pygments>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
