cmake_minimum_required(VERSION 3.16)
project(BuildOptimisationFixture CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(config_iface)
add_subdirectory(src/core)
add_subdirectory(src/logging)
add_subdirectory(src/platform)
add_subdirectory(src/math)
add_subdirectory(src/codegen)
add_subdirectory(src/serialization)
add_subdirectory(src/protocol)
add_subdirectory(src/compute)
add_subdirectory(src/middleware)
add_subdirectory(src/engine)
add_subdirectory(src/plugin_api)
add_subdirectory(src/app)
add_subdirectory(src/test)
add_subdirectory(src/benchmark)
